# PINN-for-reservoir-modelling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml
data/sample/: 1055867987.las  1055867990.las  1055867994.las  1055868000.las  1055868005.las  1055868017.las  1055868029.las  1055868037.las
docs/presentation/: COMPLETE_10MIN_PRESENTATION.md  CONFERENCE_QA_DEEP_DIVE.md  EXTENDED_PRESENTATION_CONTENT.md  POWERPOINT_STYLE_SLIDES.md  PRESENTATION_EXECUTIVE_SUMMARY.md  README.md  SLIDES.md  SPEECH.md
docs/results/: REAL_LAS_DATA_RESULTS.md  ROBUST_REAL_DATA_SUCCESS.md  TRAINING_RESULTS_SUMMARY.md  VALIDATION_SYSTEM_SUMMARY.md
docs/study_guide/: PINN_COMPREHENSIVE_STUDY_GUIDE.md
examples/advanced/: train_on_real_las_data.py  train_robust_real_data.py
examples/basic/: complete_pinn_demo.py  physics_demo.py  run_pinn_training.py
examples/validation/: test_validation.py  validation_demo.py
results/benchmarks/: benchmark_report_20251103_165857.json  benchmark_report_20251103_165935.json  benchmark_report_20251103_171518.json  benchmark_summary.md
results/models/: complete_pinn_model.pth  pinn_model.pth  robust_pinn_model.pth
scripts/: create_presentation_plots.py  generate_architecture_diagrams.py  generate_presentation_visuals.py
src/: __init__.py  config.py  main.py
src/core/: __init__.py  data_models.py  interfaces.py
src/data/: __init__.py  dataset_builder.py  las_reader.py  preprocessor.py
src/data_processing/: __init__.py
src/models/: __init__.py  model_interface.py  pinn_architecture.py  tensor_manager.py
src/physics/: __init__.py  boundary_conditions.py  pde_formulator.py  physics_loss.py
src/training/: __init__.py  batch_processor.py  convergence_monitor.py  optimizer_manager.py  pinn_trainer.py  training_pipeline.py
src/validation/: __init__.py  pde_residual_analyzer.py  prediction_comparator.py  validation_framework.py
src/visualization/: __init__.py  diagram_generator.py  results_analyzer.py  scientific_plotter.py  training_visualizer.py
tests/: __init__.py
tests/integration/: run_integration_tests.py  test_integration.py  test_simple_integration.py
tests/performance/: benchmark_suite.py  performance_comparison.py
tests/test_core/: __init__.py  (+1 more)
tutorials/: 01_introduction_and_motivation.ipynb  02_data_processing_tutorial.ipynb  03_pinn_model_implementation.ipynb  04_training_optimization.ipynb  05_validation_and_results.ipynb  06_advanced_topics.ipynb  API_Documentation.md
(+11 files in other folders)
